# pargo

./: .gitignore  Cargo.toml  README.md  rust_demo.crates
auth/: Cargo.toml
main/: Cargo.toml
main/src/: config.rs  main.rs
main/src/api/: download.rs  error.rs  mod.rs  new.rs  server.rs
main/src/index/: mod.rs
main/src/util/: git.rs  mod.rs
src/: config.rs  main.rs
src/api/: crate_index.rs  download.rs  error.rs  mod.rs  new.rs  publish.rs  server.rs
src/util/: log.rs  mod.rs  shadow.rs
storage/: Cargo.toml
