[package]
name = "pargo"
version = "0.1.0"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2018"
description = "private cargo crates registry"
keywords = ["Alternate-Registry", "Private-Registry", "cargo", "crates", "crates-index"]
readme = "README.md"
repository = "https://github.com/baoyachi/pargo"
license = "MIT AND Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
shadow-rs = "0.5"

[build-dependencies]
shadow-rs = "0.5"